--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffffff">
 
-</LinearLayout>
+    <ImageButton
+        android:layout_width="180dp"
+        android:layout_height="145dp"
+        android:id="@+id/imageButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="136dp"
+        android:src="@drawable/ss_btn"
+        android:scaleType="fitXY"
+        android:background="#00ffffff" />
+
+    <ImageButton
+        android:layout_width="180dp"
+        android:layout_height="145dp"
+        android:id="@+id/imageButton2"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_toEndOf="@+id/imageButton"
+        android:background="#00ffffff"
+        android:src="@drawable/ls_btn"
+        android:scaleType="fitXY" />
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:id="@+id/imageView"
+        android:layout_above="@+id/imageButton2"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/menu_banner"
+        android:layout_alignParentEnd="false"
+        android:layout_marginBottom="10dp" />
+
+    <ImageButton
+        android:layout_width="180dp"
+        android:layout_height="145dp"
+        android:id="@+id/imageButton3"
+        android:layout_below="@+id/imageButton"
+        android:layout_toStartOf="@+id/imageButton2"
+        android:background="#00ffffff"
+        android:scaleType="fitXY"
+        android:src="@drawable/map_btn" />
+
+    <ImageButton
+        android:layout_width="180dp"
+        android:layout_height="145dp"
+        android:id="@+id/imageButton4"
+        android:layout_alignTop="@+id/imageButton3"
+        android:layout_toEndOf="@+id/imageButton3"
+        android:scaleType="fitXY"
+        android:background="#00ffffff"
+        android:src="@drawable/cre_btn" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/imageView2"
+        android:src="@drawable/logo_bg"
+        android:layout_below="@+id/imageButton3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
+</RelativeLayout>
